<resources>
    <string name="app_name">Order Manager</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="deluxe">Deluxe</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="pepperoni">Pepperoni</string>

    <string name="order_new">Order New Pizza</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="add_pizza">Add Pizza</string>

    <string name="topping_error">Can\'t have more than 7 toppings!</string>
    <string name="add_pizza_success">Pizza successfully ordered.</string>
</resources>
