<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="641dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_new"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/addDeluxe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deluxe" />

            <Button
                android:id="@+id/addHawaiian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hawaiian" />

            <Button
                android:id="@+id/addPepperoni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pepperoni" />
        </LinearLayout>

        <Button
            android:id="@+id/currentOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_order"
            android:onClick="viewCurrentOrder"/>

        <Button
            android:id="@+id/storeOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="50dp"
            android:text="@string/store_orders"
            android:onClick="viewStoreOrders"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>